--- a/quickChart/src/main/resources/application.properties
+++ b/quickChart/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #config for base REST service
 #jdbc properties
 
-spring.datasource.url=jdbc:mysql://localhost:3306/albums_db?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/stats_db?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=1234
 
