Spring security Config files

--- a/quickChart/src/main/resources/application.properties
+++ b/quickChart/src/main/resources/application.properties
@@ -2,7 +2,13 @@
 #config for base REST service
 #jdbc properties
 
-spring.datasource.url=jdbc:mysql://localhost:3306/stats_db?allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/stats_db?allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=1234
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/org_db
 spring.datasource.username=root
 spring.datasource.password=1234
 
