--- a/quickChart/src/main/resources/application.properties
+++ b/quickChart/src/main/resources/application.properties
@@ -5,6 +5,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/stats_db?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 server.port = 8080
 
