--- a/quickChart/src/main/resources/application.properties
+++ b/quickChart/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/stats_db?allowPublicKeyRetriev
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.sendgrid.api-key=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
-spring.sendgrid.templateId=d-3716afc0fe0145eb94baabbe99a9f260
+#spring.sendgrid.api-key=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
+
 
 
 server.port = 8080
