--- a/quickChart/src/main/resources/application.properties
+++ b/quickChart/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/stats_db?allowPublicKeyRetriev
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.sendgrid.api-key=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
+#spring.sendgrid.api-key=
 
 
 
