Can create user through postman and authenticate then call other methods

--- a/quickChart/src/main/resources/application.properties
+++ b/quickChart/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.sendgrid.api-key=
 
-
+spring.security.user.name=feb
+spring.security.user.password=1235
 
 server.port = 8080
 
