--- a/quickChart/src/main/resources/application.properties
+++ b/quickChart/src/main/resources/application.properties
@@ -8,11 +8,11 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.sendgrid.api-key=
 
-spring.security.user.name=feb
-spring.security.user.password=1235
+#spring.security.user.name=feb
+#spring.security.user.password=1235
 
 server.port = 8080
-
+security.basic.enabled=false
 #spring.datasource.tomcat.max-wait=20000
 #spring.datasource.tomcat.max-active=50
 #spring.datasource.tomcat.max-idle=20
